kanc/src/tests/sample_code/should_fail/single_file/type_check/cannot_infer_type_of_empty_match.k
type Empty {}

type Unit {
    c: Unit,
}

type Bool {
    true: Bool,
    false: Bool,
}

let foo = fun _(e: Empty): Bool {
    match match e {} {
        c => Bool.true,
    }
};
